--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "style-check": "prettier --check **/*.{vue,ts,json,js,yaml,md,sql}",
-    "format": "prettier --write **/*.{vue,ts,json,js,yaml,md,sql}"
+    "format": "prettier --write **/*.{vue,ts,json,js,yaml,md,sql}",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
@@ -18,6 +20,8 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxt/eslint": "^1.8.0",
+    "eslint": "^9.33.0",
     "prettier": "^3.6.2",
     "prettier-plugin-sql": "^0.19.2"
   }
