--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -13,14 +13,23 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          cache: 'npm'
-      
+          node-version: "22"
+          cache: "npm"
+
+      - name: Restore and save cache for node_modules
+        uses: actions/cache@v4
+        with:
+          path: ./node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+            ${{ runner.os }}-
+
       - name: Install dependencies
         run: npm ci
 
       - name: Check style
         run: npm run style-check
-      
+
       - name: Check lint
         run: npm run lint
