--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
+      "output": "${workspaceFolder}/.vscode/debug_bin" ,
       "env": {
         "GIN_MODE": "debug"
       },
