--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,16 @@
   "files": [],
   "references": [
     {
-      "path": "./.nuxt/tsconfig.app.json"
+      "path": "./frontend/.nuxt/tsconfig.app.json"
     },
     {
-      "path": "./.nuxt/tsconfig.server.json"
+      "path": "./frontend/.nuxt/tsconfig.server.json"
     },
     {
-      "path": "./.nuxt/tsconfig.shared.json"
+      "path": "./frontend/.nuxt/tsconfig.shared.json"
     },
     {
-      "path": "./.nuxt/tsconfig.node.json"
+      "path": "./frontend/.nuxt/tsconfig.node.json"
     }
   ]
 }
