--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.8.0",
+    "@scalar/nuxt": "^0.5.2",
     "eslint": "^9.33.0",
     "prettier": "^3.6.2",
     "prettier-plugin-sql": "^0.19.2"
