--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write **/*.{vue,ts,json,js,yaml,md,sql}",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "sqlc": "sqlc generate"
+    "sqlc": "sqlc generate",
+    "swagger": "swagger-ui-cli serve ./docs/openapi.yaml"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
@@ -26,7 +27,6 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.8.0",
-    "@scalar/nuxt": "^0.5.2",
     "eslint": "^9.33.0",
     "prettier": "^3.6.2",
     "prettier-plugin-sql": "^0.19.2"
