--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nuxt/eslint": "^1.8.0",
     "eslint": "^9.33.0",
     "prettier": "^3.6.2",
+    "prettier-plugin-embed": "^0.5.0",
     "prettier-plugin-sql": "^0.19.2"
   }
 }
