--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.33.0",
     "prettier": "^3.6.2",
     "prettier-plugin-embed": "^0.5.0",
-    "prettier-plugin-sql": "^0.19.2"
+    "prettier-plugin-sql": "^0.19.2",
+    "shadcn-nuxt": "^2.2.0"
   }
 }
