support uuid using google lib

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -14,3 +14,8 @@ sql:
         options:
           package: db_sqlc_gen
           sql_package: pgx/v5
+          overrides:
+            - db_type: "uuid"
+              go_type:
+                import: "github.com/google/uuid"
+                type: "UUID"
