--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@t3-oss/env-nuxt": "^0.13.8",
+    "@tresjs/cientos": "^4.3.1",
     "dotenv": "^17.2.1",
+    "lucide-vue-next": "^0.540.0",
     "nuxt": "^4.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
