Change swagger lib, fix wrong url for swagger

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "runOnSave.commands": [
     {
       "globMatch": "db/**",
-      "command": "sqlc generate"
+      "command": "npm run sqlc"
     }
   ],
   "[javascript]": {
