--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "format": "prettier --write **/*.{vue,ts,json,js,yaml,md,sql}",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "sqlc": "sqlc generate",
-    "swagger": "swagger-ui-cli serve ./docs/openapi.yaml"
+    "sqlc": "go run tools/clean_sqlc.go && sqlc generate",
+    "swagger": "serve -s docs -l 8000"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
