--- a/package.json
+++ b/package.json
@@ -17,10 +17,17 @@
     "swagger": "serve -s docs -l 8000"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0",
     "@t3-oss/env-nuxt": "^0.13.8",
+    "@tailwindcss/vite": "^4.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
+    "lucide-vue-next": "^0.541.0",
     "nuxt": "^4.0.3",
+    "reka-ui": "^2.4.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.7",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "zod": "^4.0.17"
