--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,4 +4,4 @@ MODE=DEV,PROD
 
 DATABASE_URL=postgres://postgres:password@localhost:5433/omnicam
 
-MODEL_FILE_PATH=../uploads/%s/
+MODEL_FILE_PATH=../uploads/
