--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "swagger": "serve -s docs -l 8000"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^3.5.2",
     "@t3-oss/env-nuxt": "^0.13.8",
     "@tailwindcss/vite": "^4.1.12",
+    "@vueuse/core": "^13.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "lucide-vue-next": "^0.541.0",
     "nuxt": "^4.0.3",
-    "reka-ui": "^2.4.1",
+    "reka-ui": "^2.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
