--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "swagger": "serve -s docs -l 8000"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@t3-oss/env-nuxt": "^0.13.8",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/vue-table": "^8.21.3",
