--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,6 @@ MODE=DEV,PROD
 DATABASE_URL=postgres://postgres:password@localhost:5433/omnicam
 
 # Never use relative path for production
-MODEL_FILE_PATH=../uploads/
+MODEL_FILE_PATH=./uploads/
 
 FRONTEND_HOST=http://localhost:3000
