--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
     {
       "globMatch": "db/**",
       "command": "npm run sqlc"
+    },
+    {
+      "globMatch": "protobufs/**",
+      "command": "npm run proto"
     }
   ],
   "[javascript]": {
@@ -35,6 +39,10 @@
   },
   "[sql]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  },
+  "[proto3]": {
+    "editor.defaultFormatter": "zxh404.vscode-proto3",
     "editor.formatOnSave": true
   }
 }
