--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "swagger": "serve -s docs -l 8000"
   },
   "dependencies": {
-    "@nuxtjs/color-mode": "^3.5.2",
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@t3-oss/env-nuxt": "^0.13.8",
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/vue-table": "^8.21.3",
+    "@tresjs/core": "^5.0.2",
     "@vueuse/core": "^13.8.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
