--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@tanstack/vue-table": "^8.21.3",
     "@tresjs/cientos": "^4.3.1",
     "@tresjs/core": "^4.3.6",
-    "@vueuse/core": "^13.7.0",
+    "@vueuse/core": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
@@ -31,9 +31,10 @@
     "lucide-vue-next": "^0.541.0",
     "nuxt": "^4.0.3",
     "reka-ui": "^2.5.0",
+    "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
-    "tw-animate-css": "^1.3.7",
+    "tw-animate-css": "^1.4.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
