--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "sqlc": "go run ./tools/clean_sqlc && sqlc generate && echo done",
     "swagger": "serve -s docs -l 8000",
     "proto": "npm-run-all --parallel proto:backend proto:frontend",
-    "proto:backend": "protoc --go_out=backend/pkg/messages --go_opt=paths=source_relative protobufs/*.proto && echo backend done",
-    "proto:frontend": "protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=esModuleInterop=true,forceLong=string --ts_proto_out=frontend/messages/protobufs protobufs/*.proto && echo frontend done"
+    "proto:backend": "rimraf backend/pkg/messages/protobufs/* && protoc --go_out=backend/pkg/messages --go_opt=paths=source_relative protobufs/*.proto && echo backend done",
+    "proto:frontend": "rimraf frontend/messages/protobufs/protobufs/* && protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=esModuleInterop=true,forceLong=string --ts_proto_out=frontend/messages/protobufs protobufs/*.proto && echo frontend done"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
@@ -51,6 +51,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-embed": "^0.5.0",
     "prettier-plugin-sql": "^0.19.2",
+    "rimraf": "^6.0.1",
     "sql-formatter": "^15.6.9",
     "shadcn-nuxt": "^2.2.0",
     "ts-proto": "^2.7.7"
