--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-embed": "^0.5.0",
     "prettier-plugin-sql": "^0.19.2",
+    "sql-formatter": "^15.6.9",
     "shadcn-nuxt": "^2.2.0"
   }
 }
