fixed validate duration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,5 +9,5 @@ MODEL_FILE_PATH=./uploads/
 
 FRONTEND_HOST=http://localhost:3000
 
-JWT_EXPIRE_DATE=604,800 # 1 week in second
+JWT_EXPIRE_TIME=168h # 1 week in hours
 JWT_SECRET=lol # 32 byte string
