--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,5 +44,9 @@
   "[proto3]": {
     "editor.defaultFormatter": "zxh404.vscode-proto3",
     "editor.formatOnSave": true
-  }
+  },
+  "code-runner.executorMapByGlob": {
+    "*_test.go": "go test -tags=unit_test $dir"
+  },
+  "go.buildTags": "unit_test"
 }
