--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -23,45 +23,49 @@ services:
     image: migrate/migrate
     volumes:
       - ./db/migrations:/migrations
-    command: ["-path", "/migrations", "-database", "$${DATABASE_URL}", "up"]
-    networks:
-      - net
-    depends_on:
-      db:
-        condition: service_healthy
-
-  backend:
-    build:
-      context: .
-      dockerfile: ./backend/Dockerfile
-    container_name: omnicam_backend
     env_file:
       - ./backend/.env.prod
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./uploads:/app/uploads
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      ["migrate -path /migrations -database $$DATABASE_URL?sslmode=disable up"]
+    networks:
+      - net
     depends_on:
       db:
         condition: service_healthy
-    networks:
-      - net
 
-  frontend:
-    build:
-      context: .
-      dockerfile: ./frontend/Dockerfile
-    container_name: omnicam_frontend
-    env_file:
-      - ./frontend/.env.prod
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./uploads:/app/uploads
-    depends_on:
-      - backend
-    networks:
-      - net
+  # backend:
+  #   build:
+  #     context: .
+  #     dockerfile: ./backend/Dockerfile
+  #   container_name: omnicam_backend
+  #   env_file:
+  #     - ./backend/.env.prod
+  #   ports:
+  #     - "8080:8080"
+  #   volumes:
+  #     - ./uploads:/app/uploads
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  #   networks:
+  #     - net
+
+  # frontend:
+  #   build:
+  #     context: .
+  #     dockerfile: ./frontend/Dockerfile
+  #   container_name: omnicam_frontend
+  #   env_file:
+  #     - ./frontend/.env.prod
+  #   ports:
+  #     - "3000:3000"
+  #   volumes:
+  #     - ./uploads:/app/uploads
+  #   depends_on:
+  #     - backend
+  #   networks:
+  #     - net
 
   # redis:
   #   image: redis:8
