fix docker to work properly; assign different backend hosts for frontend envs

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,10 @@ FROM node:22.18.0 AS builder
 
 WORKDIR /app
 
+RUN mkdir -p ./frontend/messages
+RUN apt update \
+ && apt install -y --no-install-recommends protobuf-compiler
+
 # Copy root-level package/config files to install dependencies
 COPY package*.json ./
 COPY nuxt.config.ts ./
@@ -13,6 +17,12 @@ COPY eslint.config.js ./
 
 # Install dependencies
 RUN npm ci
+
+COPY protobufs/ ./protobufs/
+RUN protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto \
+  --ts_proto_opt=esModuleInterop=true,forceLong=string \
+  --ts_proto_out=frontend/messages \
+  protobufs/*.proto
 
 # Copy the frontend source code
 COPY frontend/ ./frontend/
