--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,21 @@
 .env
+.env.prod
 .env.example
+*.env
+*.log
+
+.DS_Store
+.git
+.gitignore
+
+node_modules
+.nuxt
+.dist
+.output
+uploads
+tools
+
+Dockerfile
+
+backend/pkg/messages/protobufs
+frontend/messages/protobufs
