--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-embed": "^0.5.0",
     "prettier-plugin-sql": "^0.19.2",
+    "sass-embedded": "^1.93.3",
     "shadcn-nuxt": "^2.2.0",
     "sql-formatter": "^15.6.9",
     "ts-proto": "^2.7.7"
