feat: update .dockerignore and environment files for production setup; enhance docker-compose conditions

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,12 +2,14 @@ PORT=8080
 
 MODE=DEV,PROD
 
-DATABASE_URL=postgres://postgres:password@localhost:5433/omnicam
+DATABASE_URL=postgres://postgres:password@db:5432/omnicam # For docker (production)
+# DATABASE_URL=postgres://postgres:password@localhost:5433/omnicam
 
 # Never use relative path for production
 MODEL_FILE_PATH=./uploads/
 
-FRONTEND_HOST=http://localhost:3000
+# Frontend host used to allow CORS (User must access using this host)
+FRONTEND_HOST=http://localhost:3000 
 
 JWT_EXPIRE_TIME=168h # 1 week in hours
 JWT_SECRET=lol # 32 byte string
