--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,8 @@ services:
     volumes:
       - ./uploads:/app/uploads
     depends_on:
+      migrate:
+        condition: service_completed_successfully
       db:
         condition: service_healthy
     networks:
