--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,9 @@
 NUXT_HOST=127.0.0.1
 NUXT_PORT=3000
-NUXT_INTERNAL_BACKEND_HOST=backend:8080
+
+# Backend host used to access from frontend server
+NUXT_INTERNAL_BACKEND_HOST=backend:8080 # For docker
+# NUXT_INTERNAL_BACKEND_HOST=localhost:8080 # For dev
+
+# Backend host used to access from client/browser
 NUXT_PUBLIC_EXTERNAL_BACKEND_HOST=localhost:8080
