--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
+    "three-csg-ts": "^3.2.0",
     "tw-animate-css": "^1.4.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.18",
