fix: merging logic, add tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,7 @@
     "editor.defaultFormatter": "pbkit.vscode-pbkit"
   },
   "code-runner.executorMapByGlob": {
-    "*_test.go": "go run tools/backend_test/main.go -- $fullFileName --args -tags=unit_test"
+    "*_test.go": "go run tools/backend_test/main.go -- $fullFileName -tags=unit_test"
   },
   "protobuf.formatOnSave": true,
   "go.buildTags": "unit_test",
