--- a/predictive-algorithm/pyproject.toml
+++ b/predictive-algorithm/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "astropy>=7.2.0",
     "ipython>=9.9.0",
     "numpy>=2.4.0",
     "numpy-quaternion>=2024.0.13",
