--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "gsap": "^3.13.0",
     "lucide-vue-next": "^0.541.0",
     "nuxt": "^4.0.3",
-    "reka-ui": "^2.5.0",
+    "papaparse": "^5.5.3",
+    "reka-ui": "^2.7.0",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@nuxt/eslint": "^1.8.0",
     "@types/node": "^24.6.2",
+    "@types/papaparse": "^5.5.2",
     "eslint": "^9.33.0",
     "prettier": "^3.6.2",
     "prettier-plugin-embed": "^0.5.0",
@@ -54,6 +56,7 @@
     "sass-embedded": "^1.93.3",
     "shadcn-nuxt": "^2.2.0",
     "sql-formatter": "^15.6.9",
-    "ts-proto": "^2.7.7"
+    "ts-proto": "^2.7.7",
+    "vite-tsconfig-paths": "^6.0.4"
   }
 }
